discussion/kv_engine/124746/124746_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30044: Modernize kv_engine using clang-tidy modernize-use-nodiscard

Change-Id: I76295aac11bdedb9ffcd67af199f823534a3d3fc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-04-01 13:03:34.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-01 14:00:08.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27221/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27221/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23278/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">22 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23278/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25582/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25582/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1461/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2: error: "Include threadlocal.h instead" [clang-diagnostic-error]
#error "Include threadlocal.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:22: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr) : dtor(dtor) {
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:44: error: cannot initialize a parameter of type "int" with an rvalue of type "nullptr_t" [clang-diagnostic-error]
    ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr) : dtor(dtor) {
                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:44: note: passing argument to parameter "dtor" here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:87:5: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalDestructor dtor;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/memory_tracking_allocator.h:119:19: error: "auto" return without trailing return type; deduced return types are a C++14 extension [clang-diagnostic-error]
    [[nodiscard]] auto getBytesAllocated() const {
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1461/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2:
error: "Include threadlocal.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1461/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1909/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">22 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1909/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2862/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2857/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2909/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10716/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
